<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add_managed_app"
        android:icon="@drawable/ic_add"
        android:title="@string/add_managed_app"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_sort_by_update_time_reverse"
                    android:checked="true"
                    android:title="@string/sort_by_update_time_reverse" />
                <item
                    android:id="@+id/item_sort_by_install_time_reverse"
                    android:title="@string/sort_by_install_time_reverse" />
                <item
                    android:id="@+id/item_sort_by_name_reverse"
                    android:title="@string/sort_by_name_reverse" />
                <item
                    android:id="@+id/item_sort_by_name"
                    android:title="@string/sort_by_name" />
                <item
                    android:id="@+id/item_sort_by_install_time"
                    android:title="@string/sort_by_install_time" />
                <item
                    android:id="@+id/item_sort_by_update_time"
                    android:title="@string/sort_by_update_time" />
                <item
                    android:id="@+id/item_sort_by_crash_frequency_reverse"
                    android:title="@string/sort_by_crash_frequency_reverse" />
                <item
                    android:id="@+id/item_sort_by_crash_frequency"
                    android:title="@string/sort_by_crash_frequency" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/item_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/item_select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_cancel_all"
        android:icon="@drawable/ic_deselect_all"
        android:title="@string/item_deselect_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_test_crash"
        android:icon="@drawable/ic_bug_report"
        android:title="@string/item_test_crash"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_help"
        android:icon="@drawable/ic_info"
        android:title="@string/item_about"
        app:showAsAction="never" />

</menu>
