<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_observe_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/observe_menu_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_observe_package_filter"
        android:icon="@drawable/ic_app_visibility"
        android:title="@string/observe_menu_package_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_observe_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/observe_menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_sort_time_newest"
                android:title="@string/observe_sort_time_newest" />
            <item
                android:id="@+id/item_sort_time_oldest"
                android:title="@string/observe_sort_time_oldest" />
            <item
                android:id="@+id/item_sort_package_asc"
                android:title="@string/observe_sort_package_asc" />
            <item
                android:id="@+id/item_sort_package_desc"
                android:title="@string/observe_sort_package_desc" />
            <item
                android:id="@+id/item_sort_exception_asc"
                android:title="@string/observe_sort_exception_asc" />
            <item
                android:id="@+id/item_sort_exception_desc"
                android:title="@string/observe_sort_exception_desc" />
        </menu>
    </item>

    <item
        android:id="@+id/item_observe_export"
        android:icon="@drawable/ic_export"
        android:title="@string/observe_menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_observe_import_logcat"
        android:icon="@drawable/ic_import"
        android:title="@string/observe_menu_import_logcat"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_observe_retention"
        android:icon="@drawable/ic_settings"
        android:title="@string/observe_menu_retention"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_clear_history"
        android:icon="@drawable/ic_delete"
        android:title="@string/observe_menu_clear_history"
        app:showAsAction="ifRoom" />

</menu>
