<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_observe_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/observe_menu_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_observe_export"
        android:title="@string/observe_menu_export" />

    <item
        android:id="@+id/item_observe_import_logcat"
        android:title="@string/observe_menu_import_logcat" />

    <item
        android:id="@+id/item_observe_stats"
        android:title="@string/observe_menu_stats" />

    <item
        android:id="@+id/item_observe_retention"
        android:title="@string/observe_menu_retention" />

    <item
        android:id="@+id/item_clear_history"
        android:icon="@drawable/ic_delete"
        android:title="@string/observe_menu_clear_history"
        app:showAsAction="ifRoom" />

</menu>
