<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="@dimen/filter_row_height"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sort_chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_chipRecent"
                style="@style/AppTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sort_recent_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_chipName"
                style="@style/AppTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_name_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_chipCrashFreq"
                style="@style/AppTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_crash_freq_short" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

</LinearLayout>
