<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="@dimen/filter_row_height"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/managed_chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/managed_chipAll"
                style="@style/AppTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/item_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/managed_chipEnabled"
                style="@style/AppTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/managed_filter_enabled" />

            <com.google.android.material.chip.Chip
                android:id="@+id/managed_chipPending"
                style="@style/AppTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/managed_filter_pending" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/managed_countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:textColor="@color/textTertiary"
        android:textSize="12sp"
        tools:text="3 apps" />

</LinearLayout>
